--- a/settings.org
+++ b/settings.org
@@ -3,5 +3,8 @@
 * Terminal
 ** Setting default shell to bash
 #+BEGIN_SRC emacs-lisp
-
+  (defvar my-term-shell "/bin/bash")
+  (defadvice ansi-term (before force-bash)
+    (interactive (list my-term-shell)))
+  (ad-activate 'ansi-term)
 #+END_SRC
