--- a/settings.org
+++ b/settings.org
@@ -81,3 +81,11 @@
   (setq ido-everywhere t)
   (ido-mode 1)
 #+END_SRC
+** ido-vertical
+#+BEGIN_SRC emacs-lisp
+  (use-package ido-vertical-mode
+    :ensure t
+    :init
+    (ido-vertical-mode 1))
+  (setq ido-vertical-define-keys 'C-n-and-C-p-only)
+#+END_SRC
