--- a/settings.org
+++ b/settings.org
@@ -46,7 +46,6 @@
 
   (global-set-key (kbd "<s-return>") 'ansi-term)
 #+END_SRC
-
 * which-key
 ** package which-key
 #+BEGIN_SRC emacs-lisp
@@ -55,7 +54,6 @@
     :init
     (which-key-mode))
 #+END_SRC
-
 * beacon
 ** package beacon
 #+BEGIN_SRC emacs-lisp
@@ -64,7 +62,6 @@
     :init
     (beacon-mode 1))
 #+END_SRC
-
 * Org
 ** Org Bullets
 #+BEGIN_SRC emacs-lisp
@@ -137,4 +134,18 @@
   (use-package rainbow-mode
     :ensure t
     :init (rainbow-mode 1))
+#+END_SRC
+* switch-window
+#+BEGIN_SRC emacs-lisp
+  (use-package switch-window
+    :ensure t
+    :config
+    (setq switch-window-input-style 'minibuffer)
+    (setq switch-window-increase 4)
+    (setq switch-window-threshold 2)
+    (setq switch-window-shortcut-style 'qwerty)
+    (setq switch-window-qwerty-shortcuts
+	  '("a" "s" "d" "f" "j" "k" "l"))
+    :bind
+    ([remap other-window] . switch-window))
 #+END_SRC
