fix terminal setting

--- a/settings.org
+++ b/settings.org
@@ -69,7 +69,7 @@
 * Terminal
 ** Setting default shell to bash
 #+BEGIN_SRC emacs-lisp
-  (defvar my-term-shell "/bin/zsh")
+  (defvar my-term-shell "/bin/bash")
   (defadvice ansi-term (before force-bash)
     (interactive (list my-term-shell)))
   (ad-activate 'ansi-term)
